--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-fastapi==0.95.0
-uvicorn==0.22.0
-numpy==1.23.5
-pillow==9.5.0
-tensorflow==2.16.1
+Flask==2.3.2
+Flask-CORS==3.0.10
+numpy==1.25.2
+
