--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 Flask==2.3.2
 Flask-CORS==3.0.10
 numpy==1.25.2
+pandas==2.1.1
+matplotlib==3.8.0
+seaborn==0.12.2
+plotly==5.17.0
+scikit-learn==1.3.0
+pickle5==0.0.12
+
 
